# arl-in-coq

./: LICENSE  Makefile  README.md  _CoqProject  coq-arl.opam  coq-ars.opam  dune-project
slides/: Makefile  README.md  beamercolorthemeRV.sty  beamerinnerthemeRV.sty  beamerouterthemeRV.sty  beamerthemeRV.sty  index.html  k.bib
theories/ARL/: dune
theories/ARL/ARL/: CTL.v
theories/ARL/ARL/Deduction/: DeductionAF.v  DeductionEF.v  DeductionRules.v
theories/ARL/ARL/FixedPoints/: FixedPointAF.v  FixedPointEF.v
theories/ARL/ARS/: TransitionSystem.v
theories/ARL/Lib/: FreshExtras.v  Lists.v  Traces.v
theories/ARL/QARL/Deduction/: QDeductionAF.v
theories/ARL/QARS/: Matching.v  RefreshRule.v  RuleBasedTransitionSystem.v
theories/ARS/: dune
theories/ARS/ARS/: CTL.v  RuleBasedTransitionSystem.v  TransitionSystem.v
theories/ARS/ARS/Deduction/: DeductionAF.v  DeductionEF.v  DeductionRules.v
theories/ARS/ARS/FixedPoints/: FixedPointAF.v  FixedPointEF.v
theories/ARS/Lib/: Traces.v
theories/ARS/QARS/: Matching.v  RefreshRule.v  RuleBasedTransitionSystem.v
theories/ARS/QARS/Deduction/: QDeductionAF.v
