opam-version: "2.0"
maintainer: "traian.serbanuta@gmail.com"
version: "dev"

homepage: "https://github.com/traiansf/coq-ars"
dev-repo: "git+https://github.com/traiansf/coq-ars.git"
bug-reports: "https://github.com/traiansf/coq-ars/issues"
license: "MIT"

synopsis: "Coq formalization of Abstract Rewrite Systems"
description: """
Formalization of Abstract Rewrite Systems together with a notion of
CTL-like always-finally reachability claims and an abstract deduction system
which can be used to derive such claims."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {>= "8.15"}
  "coq-stdpp" {>= "1.7.0" & < "1.8.0"}
  "coq-sets" {= "dev"}
]

tags: [
  "keyword:abstract rewrite system"
  "keyword:reachability"
  "keyword:ctl"
]
authors: [
  "Traian Florin Șerbănuță"
]
